--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cutshort",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/dev-codergautam.github.io",
+  "homepage": "https://github.com/dev-codergautam.github.io/cutshort-assignment",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
