--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cutshort",
+  "name": "cutshort-assignment",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/dev-codergautam.github.io/cutshort-assignment",
